Reworked the Panel The translated messages are more pleasing for the human eyes now Made a better UI panel Fixed some errors/warnings